# MinePyScript

./: .gitignore  README.md  pyproject.toml
minescript/: __init__.py
