[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minescript"
version = "1.0.0"
description = "Python helper module for the local Minescript Fabric bridge"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["minecraft", "fabric", "automation", "minescript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["minescript"]
